# decimate-literate

./: CHANGELOG.md  Main.md  README.md  worldturtle-literate.cabal
